--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "expo-linear-gradient": "^15.0.7",
     "expo-router": "^6.0.10",
     "expo-splash-screen": "^31.0.10",
+    "expo-updates": "~29.0.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-native": "^0.81.4",
